<resources>
    <string name="app_name">NewVista</string>
    <string-array name="genres_array">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Short</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="home_location">Home Location</string>
    <string name="log_in">Log in</string>
    <string name="log_in_description">and you can discover best movies around the world</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in_status_1">Wait…</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot">Forgot your password?</string>
    <string name="new_movie_releases">New Movie Releases</string>
    <string name="new_movie_subtitle">Watch all the big hits</string>
    <string name="more">More</string>
    <string name="movie_title_sample" translatable="false">Transformers: The Last Knight (2017)</string>
    <string name="genre_sample" translatable="false">Sci-Fi, Fantasy, Action</string>
    <string name="duration_sample" translatable="false">2h 34min</string>
    <string name="description_sample" translatable="false">Autobots and Decepticons are at war, with humans on the sidelines. Optimus Prime is gone. The key to saving our future lies buried in the secrets of the past, in the hidden history of Transformers on Earth.</string>
    <string name="log_in_success">Login success</string>
    <string name="log_in_failure">Login failure</string>
    <string name="quick_access">Quick Access</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="my_newvista">My NewVista</string>
    <string name="order">Order</string>
    <string name="comment">Comment</string>
    <string name="watchlist">Watchlist</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="about">About this app</string>
    <string name="sign_out_title">Sign Out Prompt</string>
    <string name="sign_out_message">If you sign out, all your personal and app data will be cleared (include your account information and image cache). \nAre your sure to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sign_out_cancel_message">Glad you\'re here!</string>
    <string name="sign_out_confirm_message">See you next time!</string>
    <string name="sign_out_success">Sign out success</string>
    <string name="sign_out_failure">Sign out failure</string>
    <string name="app_editor">Johnny Miller</string>
    <string name="email_sample" translatable="false">android@google.com</string>
    <string name="release_date_sample" translatable="false">June 21, 2017</string>
    <string name="order_ticket">Order From $</string>
    <string name="director_sample" translatable="false">Micheal Bay</string>
    <string name="stars_sample" translatable="false">Mark Wahlberg, Anthony Hopkins, Josh Duhamel</string>
    <string name="storyline">Storyline</string>
    <string name="read_more">Read more</string>
    <string name="cast_amp_credits"><![CDATA[CAST & CREDITS]]></string>
    <string name="directors">Directors</string>
    <string name="stars">Stars</string>
    <string name="all_details">All Details</string>
    <string name="genre">GENRE</string>
    <string name="back">Back</string>
    <string name="transition_poster" translatable="false">1</string>
    <string name="country">Country</string>
    <string name="country_sample" translatable="false">China, Canada, USA</string>
    <string name="language">Language</string>
    <string name="language_sample" translatable="false">English</string>
    <string name="release_date">Release Date</string>
    <string name="filming_location">Filming Location</string>
    <string name="filming_location_sample" translatable="false">Michigan Motion Picture Studios, 1999 Centerpoint Parkway, Pontiac, Michigan, USA</string>
    <string name="runtime">Runtime</string>
    <string name="runtime_sample" translatable="false">154 min</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="aspect_ratio_sample" translatable="false">1.90 : 1</string>
    <string name="rate_this_movie">Rate this movie</string>
    <string name="review_title">Review title here</string>
    <string name="your_review">Your review here</string>
    <string name="spoiler">Does this review contain spoilers?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="login_prompt">Before you write down a movie review, you should log in first.</string>
    <string name="johnny_miller" translatable="false">Johnny Miller</string>
    <string name="loading">Loading…</string>
    <string name="search_bar_hint">Search by title</string>
    <string name="picks_title">Smart Picks for You</string>
    <string name="random_picks_title">Random Picks for You</string>
    <string name="surprise">Surprise!</string>
    <string name="refreshing_user_review">Refreshing user review…</string>
    <string name="pull_down_to_refresh_user_review">Pull down to refresh user review</string>
    <string name="warning_spoilers">Warning: Spoilers</string>
    <string name="full_scores" translatable="false">/10</string>
    <string name="account">Account</string>
    <string name="showtime_sample" translatable="false">2018-01-15 10:20:00</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="selected">Selected</string>
    <string name="selected_seats">Selected seats:\n</string>
    <string name="seat_not_selected">Seat not selected</string>
    <string name="seats_warning">The selected seat count CANNOT exceed&#160;</string>
    <string name="theater_name_sample" translatable="false">AMC Century City 15</string>
    <string name="theater_location_sample" translatable="false">10250 Santa Monica Blvd Ste 2000, Los Angeles, CA 90067</string>
    <string name="from">From</string>
    <string name="currency">$</string>
    <string name="price_sample" translatable="false">35</string>
    <string name="movie_schedule">Movie Schedule</string>
    <string name="search_title">Search:&#160;</string>
    <string name="no_movie_schedule">No movie schedule yet</string>
    <string name="feature">If you like my app,\nplease please give me a five star\nand lease a comment in Google Play</string>
    <string name="user_reviews">User Reviews</string>
    <string name="now_in_theaters">Now In Theaters</string>
    <string name="explore_trending">Explore trending</string>
    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="movie_schedule_error">Something went wrong: No movies schedules</string>
    <string name="seat_selection">Seat selection</string>
    <string name="loading0">Loading</string>
    <string name="loading1">Loading.</string>
    <string name="loading2">Loading..</string>
    <string name="loading3">Loading...</string>
    <string name="total">Total: $</string>
    <string name="confirm2">, Confirm</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="share">Share</string>
    <string name="about_version">Version: </string>
    <string name="hello">Hello, glad to see you!</string>
    <string name="contact_me">If you liked this app, feel free to contact me.</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="feedback">Feedback by email</string>
    <string name="code_github">Source code on GitHub</string>
    <string name="my_location">Harbin, HLJ Prov., P.R.China</string>
    <string name="licenses">Open source licenses</string>
    <string name="about_new_vista">About New Vista</string>
    <string name="about_email_intent">About: New Vista</string>
    <string name="about_not_found_email">Not found email app</string>
    <string name="share_with">Share with</string>
    <string name="close">Close</string>
    <string name="inspiration">UI Design Inspiration from Google Play and Material Design app by Eajy</string>
    <string name="order_history">Order History</string>
    <string name="ticket_detail">Ticket Detail</string>
    <string name="new_vista_ticket_trademark">New Vista Ticket ™</string>
    <string name="order_number">Order Number:</string>
    <string name="total_price">Total Price:</string>
    <string name="ticket_amount">Ticket Amount:</string>
    <string name="johnny_miller_designed">Designed by Johnny Miller</string>
    <string name="enter_payment_password">Enter Payment Password</string>
    <string name="payment">Payment</string>
    <string name="clear">Clear</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="top_rated_movies_subtitle">Top 10 as rated by NewVista Users</string>
    <string name="average">Average</string>
    <string name="zero_dot_zero" translatable="false">0.0</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact based on your message
        history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">Johnny Miller</string>
    <string name="pref_title_Language">Language</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Auto</item>
        <item>English (US)</item>
        <item>Simplified Chinese (P.R.China)</item>
        <item>Traditional Chinese (Hong Kong, SAR, P.R.China)</item>
        <item>Traditional Chinese (Taiwan, R.O.China)</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string name="purchase">Purchase</string>
</resources>