<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/showtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="11:35 am"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/auditoriumName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:text="Auditorium Name Here"
        android:textColor="@color/md_black_color_code"
        app:layout_constraintEnd_toStartOf="@+id/currency"
        app:layout_constraintStart_toEndOf="@+id/showtime"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/currency"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_sample"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/purchase"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.robertlevonyan.views.chip.Chip
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/purchase"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mcv_backgroundColor="@color/white"
        app:mcv_chipText="@string/purchase"
        app:mcv_cornerRadius="24dp"
        app:mcv_strokeColor="@color/colorAccent"
        app:mcv_strokeSize="1dp"
        app:mcv_textColor="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>

